--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Macondo&family=Manrope&display=swap');
+
+* {
+  font-family: 'Manrope', sans-serif;
+  font-size: 22px;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+.calculator {
+  margin: auto auto;
+  border: 5px solid #000;
+  border-radius: 10px;
+  padding: 20px;
+  height: max-content;
+  background-color: #06024d;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form input[type="text"] {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr) ;
+  height: 80px;
+  text-align: right;
+  font-size: 28px;
+  font-weight: 700;
+  padding: 5px;
+  letter-spacing: 1px;
+}
+
+.keypad {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  margin-top: 10px;
+}
+
+.keypad-item {
+  padding: 10px;
+  margin: 5px;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+}
+
+.symbols {
+  background-color: #1910bd;
+  color: #fff;
+}
+
+input:active,
+input:focus,
+.keypad-item:active,
+.keypad-item:focus {
+  outline: none;
+}
+
+#clear {
+  grid-column: 1 / span 2;
+  border-radius: 5px;
+  margin: 2px;
+}
+
+.zero {
+  grid-column: 2 / span 2;
 }
